08-kuber/08/deployment/02/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          name: configmap-volume
          subPath: index.html
      volumes:
      - name: configmap-volume
        configMap:
          name: nginx-configmap
          items:
          - key: index
            path: index.html
